Fix security issues, improve tests, and prepare for deployment

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,9 +5,8 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
+    "noEmit": true,
     "strict": true
   },
-  "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": []
+  "include": ["vite.config.js", "vitest.config.ts"]
 }
